# academorix-frontend

./: .dockerignore  .doppler.yaml  .editorconfig  .gitignore  .lintstagedrc.mjs  .npmrc  .prettierignore  .size-limit.json  AGENTS.md  AGENT_QUICKSTART.md  AGENT_ROSTER.md  ARCHITECTURE.md  PLAN.md  README.md  commitlint.config.mjs  doppler.yaml  eslint.config.mjs  fullplan.md  knip.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  tasks-design-pipeline.md  tasks-intake-discovery-definition.md  tasks-ship-and-operate.md  tasks.md  tsconfig.base.json  tsup.config.base.ts  turbo.json  vercel.json
.changeset/: frontend-standards-sweep-2026-07-21.md  kbd-i18n-cleanup.md  kbd-i18n-scaffold.md  manager-base-class-migrations.md  retire-coordinator-contract-reexport.md  retire-queue-scope-contract-passthroughs.md
.github/: CODEOWNERS  dependabot.yml.disabled  labeler.yml  pull_request_template.md
.github/workflows/: ci.yml  desktop-release.yml  labeler.yml  php.yml  pr-title.yml  preview-status.yml  preview.yml  release.yml  size.yml
.kiro/agents/: README.md  academorix-product.md  accessibility-audit-lead.md  api-contract-designer.md  backend-architecture-reviewer.md  backend-platform-reviewer.md  chief-orchestrator.md  code-documentation-writer.md  code-standards-steward.md  codebase-housekeeper.md  container-di-architecture-reviewer.md  data-lead.md  data-modeler.md  delivery-lead.md  deploy-engineer.md  design-lead.md  docs-adr-steward.md  docs-changesets-steward.md  docs-lead.md  e2e-test-engineer.md  framework-core-builder.md  heroui-ui-builder.md  laravel-feature-builder.md  observability-engineer.md  package-api-release-reviewer.md  performance-engineer.md  product-designer.md  product-lead.md  quality-lead.md  release-manager.md  security-compliance-reviewer.md  security-lead.md  solution-architect.md  spec-intake-analyst.md  sre-lead.md  standards-steward.md  support-utilities-steward.md  tenancy-compliance-auditor.md  test-mutation-engineer.md  threat-modeler.md  (+4 more)
.kiro/hooks/: adr-save-steering-reminder.json  agent-file-sync-reminder.json  agent-roster-session-orient.json  persona-dossier-sync-reminder.json  session-start-agent-directory.json  steering-change-suggests-audit.json
.kiro/product/: agent-personas.md
.kiro/reports/: .commit-msg-blueprints.txt  .commit-msg-sweep.txt  00-triage-summary-2026-07-21.md  api-contract-designer-2026-07-21.md  backend-architecture-reviewer-2026-07-21.md  backend-platform-reviewer-2026-07-21.md  blueprint-mover.py  build-composer-api-final.py  build-composer-api.py  code-documentation-writer-2026-07-21.md  composer-api-require.json  container-di-architecture-reviewer-2026-07-21.md  data-modeler-2026-07-21.md  docs-adr-steward-2026-07-21.md  docs-changesets-2026-07-21.md  emit-e9-drop-migrations.py  emit-migration-markers.py  fix-e9-interface-strip.py  heroui-aria-haspopup-upstream-2026-07-21.md  manager-base-class-review-2026-07-22.md  move-safeguarding-to-academorix.py  octane-static-audit.py  package-api-release-reviewer-2026-07-21.md  phase-c-batch-2-mover.py  phase-c-batch-3-mover.py  phase-c-batch-4-contracts-registry-mover.py  phase-c-housekeeper-2026-07-21.md  phase-d-unblock-adrs-2026-07-21.md  phase-d1-adrs-2026-07-21.md  phase-e-pr-e1-strict-types.py  phase-e-pr-e4-flatten-actions.py  phase-e-summary-2026-07-21.md  reconcile-gateway-payment-methods.py  rename-mattiverse-to-wildside.py  stamp-services.py  standards-steward-2026-07-21.md  sweep-academorix-sdks.py  sweep-all-sdk-refs.py  sweep-composer-scripts-apps.py  sweep-composer-scripts.py  (+7 more)
.kiro/skeletons/: README.md  a11y-audit.yml  adr.md  grafana-dashboard.json  k6-scenario.js  lighthouserc.js  release-pr.md  runbook.md  sentry-project.yaml  size-limit.json
.kiro/steering/: actions-only-full.md  architecture.md  blueprints.md  bootstrappers.md  browser-safe-imports.md  cache-tag-resolvers.md  code-standards.md  communication-patterns.md  console-commands.md  contract-implementer-split.md  contract-reexports.md  conventions.md  data-first.md  discovery-vs-loader.md  discovery.md  docblocks.md  documentation.md  domain-patterns.md  doppler.md  enum-db-seed-dual-source.md  events-authoring.md  folder-conventions.md  frontend-module-architecture.md  frontend-packages.md  growth-and-observability.md  hierarchy.md  (+23 more)
apps/dashboard/src-tauri/: .gitignore  Cargo.toml  build.rs  desktop-config.json  tauri.conf.json
apps/dashboard/src-tauri/capabilities/: default.json  phase3.json
apps/dashboard/src-tauri/icons/: README.md  icon.icns
apps/dashboard/src-tauri/src/: commands.rs  deep_link.rs  lib.rs  main.rs  menu.rs  notification.rs  shortcut.rs  tray.rs
blueprints/: README.md
contracts-app/: package.json  tsconfig.json
docker/: compose.dev.yml  postgres-init.sh  service.Dockerfile
docs/: backend-package-tiers.md  launch-readiness.md  service-boundary.md  services.md
e2e/: home.spec.ts
modules/: README.md
scripts/: add-catalog-schema.py  audit-composer-naming.py  check-impl-collisions.sh  cleanup-product-composer-prose.py  drop-stackra-prefix.py  fix-composer-ns.py  fix-moved-catalog-doc-paths.py  fix-moved-file-docblocks.py  fix-tenancy-prose.py  fix-tenants-to-tenancy.py  fix-wave1-priorities.py  fix-workspace-terms-wave1.py  flatten-console-commands.py  gen-25-sdks.sh  gen-all-modules.sh  import-real-implementations.sh  migrate-configs-to-packages.py  migrate-console.mjs  migrate-to-catalog.mjs  normalize-wave1-module-deps.py  promote-wave2a-ulid-prefixes.py  promote-wave2b-ulid-prefixes.py  promote-wave3a-ulid-prefixes.py  promote-wave3bc-ulid-prefixes.py  promote-wave4-wave6-ulid-prefixes.py  promote-wave5-ulid-prefixes.py  promote-wave7-a-ulid-prefixes.py  prune-duplicate-migrations.py  rename-composer-packages.py  rename-tenancy-to-workspaces.py  rename-workspaces-to-tenancy-round2.py  rename-workspaces-to-tenancy.py  revert-product-to-academorix.py  smoke-publishables.mjs  strip-stackra-ui.mjs  toggle-jit.mjs  update-wave1-ulid-prefixes.py  verify-package-root.mjs  wire-composer-path-repos.py
(+29524 files in other folders)
